Add handling to invalid JSON when processing raw data, turns out there are plenty of them

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "process-sheets": "node process-google-sheets/index.js",
+    "process-raw-data": "node add-and-cleanup/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
