--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "process-sheets": "node process-google-sheets/index.js",
     "process-raw-data": "node add-and-cleanup/index.js",
+    "create-date-map" : "node create-date-map/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
